# genshin-session-manager

./: .gitignore  Cargo.toml
src/: main.rs
