[package]
name = "genshin-session-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
registry = "1.2.1"

[[bin]]
name = "gsm"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"